[gd_scene load_steps=29 format=2]

[ext_resource path="res://GridGame/GridGame.gd" type="Script" id=1]
[ext_resource path="res://GridGame/TurnController.gd" type="Script" id=2]
[ext_resource path="res://Asset/d1.png" type="Texture" id=3]
[ext_resource path="res://Asset/d2.png" type="Texture" id=4]
[ext_resource path="res://Asset/d4.png" type="Texture" id=5]
[ext_resource path="res://GridGame/GridPoint.tscn" type="PackedScene" id=6]
[ext_resource path="res://far-buildings.png" type="Texture" id=7]
[ext_resource path="res://back-buildings.png" type="Texture" id=8]
[ext_resource path="res://foreground.png" type="Texture" id=9]
[ext_resource path="res://custom.tres" type="Theme" id=10]
[ext_resource path="res://join_font.tres" type="DynamicFont" id=11]
[ext_resource path="res://sound6.wav" type="AudioStream" id=12]
[ext_resource path="res://Asset/8-BIT WONDER.TTF" type="DynamicFontData" id=13]
[ext_resource path="res://GridGame/Trun_statusFont.tres" type="DynamicFont" id=14]
[ext_resource path="res://GridGame/bottom_panel.gd" type="Script" id=15]
[ext_resource path="res://Asset/Retro Gaming.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://GridGame/Intro Theme.wav" type="AudioStream" id=17]

[sub_resource type="TileSet" id=1]
0/name = "d1.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "d2.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "d4.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0196078, 0.172549, 0.27451, 1 )
border_width_bottom = 3
border_color = Color( 0.372549, 0.129412, 0.313726, 1 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
outline_color = Color( 0.0784314, 0.537255, 0.788235, 1 )
font_data = ExtResource( 13 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.156863, 0.14902, 0.188235, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.282353, 0.262745, 0.513726, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.109804, 0.109804, 0.109804, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.258824, 0.14902, 0.215686, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.584314, 0, 0.235294, 1 )

[sub_resource type="DynamicFont" id=8]
size = 10
extra_spacing_top = 3
extra_spacing_bottom = 3
font_data = ExtResource( 16 )

[node name="GridGame" type="Node2D"]
script = ExtResource( 1 )

[node name="Players" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="board_pos" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0 )

[node name="board" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( -120, -120 )
z_as_relative = false

[node name="GridPoint" parent="board" instance=ExtResource( 6 )]
position = Vector2( 407.207, 343.715 )

[node name="GridPoint2" parent="board" instance=ExtResource( 6 )]
position = Vector2( 471.207, 343.715 )

[node name="GridPoint3" parent="board" instance=ExtResource( 6 )]
position = Vector2( 535.207, 343.715 )

[node name="GridPoint4" parent="board" instance=ExtResource( 6 )]
position = Vector2( 598.551, 344.865 )

[node name="GridPoint5" parent="board" instance=ExtResource( 6 )]
position = Vector2( 407.658, 407.715 )

[node name="GridPoint6" parent="board" instance=ExtResource( 6 )]
position = Vector2( 472.356, 407.715 )

[node name="GridPoint7" parent="board" instance=ExtResource( 6 )]
position = Vector2( 534.304, 407.468 )

[node name="GridPoint8" parent="board" instance=ExtResource( 6 )]
position = Vector2( 599.003, 408.166 )

[node name="GridPoint9" parent="board" instance=ExtResource( 6 )]
position = Vector2( 408.356, 472.095 )

[node name="GridPoint10" parent="board" instance=ExtResource( 6 )]
position = Vector2( 473.055, 472.095 )

[node name="GridPoint11" parent="board" instance=ExtResource( 6 )]
position = Vector2( 535.003, 472.095 )

[node name="GridPoint12" parent="board" instance=ExtResource( 6 )]
position = Vector2( 599.25, 470.698 )

[node name="GridPoint13" parent="board" instance=ExtResource( 6 )]
position = Vector2( 408.356, 534.19 )

[node name="GridPoint14" parent="board" instance=ExtResource( 6 )]
position = Vector2( 473.055, 534.19 )

[node name="GridPoint15" parent="board" instance=ExtResource( 6 )]
position = Vector2( 535.905, 534.19 )

[node name="GridPoint16" parent="board" instance=ExtResource( 6 )]
position = Vector2( 599.25, 534.19 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( -1.05261, 127.702 )
scale = Vector2( 3.13107, 2.35933 )
texture = ExtResource( 7 )
centered = false

[node name="back-buildings" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 399.368, 353.632 )
scale = Vector2( 3.11349, 2.35965 )
texture = ExtResource( 8 )

[node name="foreground" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 195.158, 521.526 )
scale = Vector2( 1.10392, 1.21382 )
texture = ExtResource( 9 )

[node name="foreground2" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 590.948, 523.105 )
scale = Vector2( 1.16373, 1.21382 )
texture = ExtResource( 9 )

[node name="Interface" type="CanvasLayer" parent="."]

[node name="upper_panel" type="Panel" parent="Interface"]
margin_right = 801.0
margin_bottom = 136.0
theme = ExtResource( 10 )
custom_styles/panel = SubResource( 2 )

[node name="my_score" type="Label" parent="Interface/upper_panel"]
margin_left = 20.0
margin_top = 80.0
margin_right = 138.0
margin_bottom = 127.0
custom_fonts/font = ExtResource( 11 )
text = "Score"
valign = 1

[node name="timeText" type="Label" parent="Interface/upper_panel"]
margin_left = 670.0
margin_top = 80.0
margin_right = 788.0
margin_bottom = 127.0
custom_fonts/font = ExtResource( 11 )
text = "Timer"
valign = 1

[node name="turnButton" type="Button" parent="Interface/upper_panel"]
margin_left = 309.17
margin_top = 466.198
margin_right = 455.17
margin_bottom = 507.198
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0.635294, 0.113725, 0.160784, 1 )
custom_colors/font_color_hover = Color( 0.52002, 0.195007, 0.441568, 1 )
text = "End turn"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Interface/upper_panel/turnButton"]
stream = ExtResource( 12 )

[node name="my_name" type="Label" parent="Interface/upper_panel"]
margin_left = 20.0
margin_top = 40.0
margin_right = 120.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 4 )

[node name="turn_status" type="Label" parent="Interface/upper_panel"]
margin_left = 301.623
margin_top = 0.735092
margin_right = 468.623
margin_bottom = 32.7351
theme = ExtResource( 10 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.972549, 0.509804, 0.243137, 1 )
text = "Turn status"
valign = 1

[node name="whose_turn" type="Label" parent="Interface/upper_panel"]
margin_left = 311.179
margin_top = 96.0
margin_right = 462.179
margin_bottom = 128.0
theme = ExtResource( 10 )
custom_fonts/font = ExtResource( 11 )
text = "whose turn"
valign = 1

[node name="bottom_panel" type="Panel" parent="Interface"]
margin_top = 580.0
margin_right = 800.0
margin_bottom = 800.0
custom_styles/panel = SubResource( 5 )
script = ExtResource( 15 )

[node name="chat_display" type="TextEdit" parent="Interface/bottom_panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 170.0
custom_styles/read_only = SubResource( 6 )
readonly = true
show_line_numbers = true
wrap_enabled = true

[node name="chat_input" type="LineEdit" parent="Interface/bottom_panel"]
margin_left = 20.0
margin_top = 180.0
margin_right = 780.0
margin_bottom = 204.0

[node name="game_output" type="TextEdit" parent="Interface"]
margin_left = 624.0
margin_top = 176.0
margin_right = 772.0
margin_bottom = 528.0
theme = ExtResource( 10 )
custom_styles/read_only = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.788235, 1, 0, 1 )
readonly = true
context_menu_enabled = false
smooth_scrolling = true
wrap_enabled = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
volume_db = -14.136
autoplay = true
attenuation = 1.93187
[connection signal="pressed" from="Interface/upper_panel/turnButton" to="." method="_on_turnButton_pressed"]
